-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.9.0
-
None
-
autotest review-zfs
-
3
-
9223372036854775807
sanity test 101g fails with
'not all RPCs are 16 MiB BRW rpcs'
In the test log on the client, we can see the ‘File too large’ error returned when dd tries to write to the file system
== sanity test 101g: Big bulk(4/16 MiB) readahead ==================================================== 11:11:42 (1462903902) CMD: onyx-50vm8 /usr/sbin/lctl get_param obdfilter.*.brw_size | while read s; do echo ost1 \$s; done CMD: onyx-50vm8 /usr/sbin/lctl get_param obdfilter.*.brw_size | while read s; do echo ost2 \$s; done CMD: onyx-50vm8 /usr/sbin/lctl set_param -n obdfilter.lustre-OST*.brw_size=16M osd-*.lustre-OST*.brw_size=16M 2>&1 remount client to enable large RPC size CMD: onyx-50vm1.onyx.hpdd.intel.com grep -c /mnt/lustre' ' /proc/mounts Stopping client onyx-50vm1.onyx.hpdd.intel.com /mnt/lustre (opts:) CMD: onyx-50vm1.onyx.hpdd.intel.com lsof -t /mnt/lustre CMD: onyx-50vm1.onyx.hpdd.intel.com umount /mnt/lustre 2>&1 Starting client: onyx-50vm1.onyx.hpdd.intel.com: -o user_xattr,flock onyx-50vm7@tcp:/lustre /mnt/lustre CMD: onyx-50vm1.onyx.hpdd.intel.com mkdir -p /mnt/lustre CMD: onyx-50vm1.onyx.hpdd.intel.com mount -t lustre -o user_xattr,flock onyx-50vm7@tcp:/lustre /mnt/lustre dd: error writing '/mnt/lustre/f101g.sanity': File too large 2+0 records in 1+0 records out 16777216 bytes (17 MB) copied, 0.978339 s, 17.1 MB/s 0+0 records in 0+0 records out 0 bytes (0 B) copied, 0.00599718 s, 0.0 kB/s 0 RPCs sanity test_101g: @@@@@@ FAIL: not all RPCs are 16 MiB BRW rpcs
We’ve had three occurrences of this failure since the test was introduced by http://review.whamcloud.com/19368 a little over a week ago and, so far, only seen on review-zfs-part-1:
2016-05-09 - https://testing.hpdd.intel.com/test_sets/145be8f2-1661-11e6-b5f1-5254006e85c2
2016-05-10 - https://testing.hpdd.intel.com/test_sets/f2b9b50c-1701-11e6-b5f1-5254006e85c2
2016-05-11 - https://testing.hpdd.intel.com/test_sets/73c7a9a4-179f-11e6-b5f1-5254006e85c2
- is related to
-
LU-10239 Lustre crash (client): The first extent to be fit in a RPC contains 17 chunks, which is over the limit 16.
-
- Resolved
-
-
LU-8632 Address of function 'page_count' is used instead of a local variable
-
- Resolved
-
-
LU-7181 Submitting random writes using 4MB RPC
-
- Resolved
-
- is related to
-
LU-8139 sanity test_101g: 'max_pages_per_rpc not correctly set'
-
- Resolved
-